python-debian (0.1.14) UNRELEASED; urgency=low

  * examples/deb822/: add new example render-dctrl, to render packages in
    a dctrl-tools pipeline (using Markdown as long description syntax)

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 26 Apr 2009 18:08:50 +0200

python-debian (0.1.13) unstable; urgency=low

  [ John Wright ]
  * deb822: Correctly handle deletion of keys that only exist in a pre-parsed
    dictionary

  [ Stefano Zacchiroli ]
  * change naming convention to match PEP 8, with backward compatibility
    (and deprecation warnings) for all old names. Thanks to Ben Finney for
    the patch. (Closes: #489722)
  * Switch from "sha" module to "hashlib": fix a deprecation warning of
    Python 2.6. As a consequence, update pyversions to require a minimum
    of Python 2.5, which is available also in stable now. (Closes: #518427)
  * debian_support.PackageFile: allow for stanza separators made of tabs
    and spaces in addition to newlines (Closes: #501927)
  * bump Standards-Version to 3.8.1 (no changes needed)

 -- Stefano Zacchiroli <zack@debian.org>  Tue, 07 Apr 2009 10:21:04 +0200

python-debian (0.1.12) unstable; urgency=low

  [ Filippo Giunchedi ]
  * Add initial support to deb822 for gpg signature checking (Closes: #485829)
  * Suggest gpgv for signature checking

  [ Stefano Zacchiroli ]
  * deb822: add support for pretty printing structured inter-package
    relationships (and relevant tests)
  * debfile: add support for .tar.bz2 parts contained in .deb packages, and
    relative regression test. Thanks to Cameron Dale and Tom Parker.
    (Closes: #462859).

  [ John Wright ]
  * deb822: allow the use of unicode objects in __getitem__
  * changelog: fix the "topline" regular expression to match the one in dpkg's
    Dpkg/Changelog/Debian.pm so that it allows '.' and '+' in the distribution
    field
  * deb822: Add a use_apt_pkg parameter to Deb822.iter_paragraphs.  Now,